<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="onesong">1 Songs</string>
    <string name="durationformatshort">%2$2d:%5$02d</string>
    <string name="durationformatshort_padding_with_0">%2$02d:%5$02d</string>
    <string name="durationformatlong">%1$d:%3$02d:%5$02d</string>
    <string name="goto_start">Library</string>
    <string name="goto_playback">Play</string>
    <string name="party_shuffle">Party Shuffle</string>
    <string name="party_shuffle_off">Close Party Shuffle</string>
    <string name="delete_item">Delete</string>
    <string name="shuffle_all">Shuffle All</string>
    <string name="play_all">Play All</string>
    <string name="delete_artist_desc">%s All songs will be permanently deleted from the SD card.</string>
    <string name="delete_album_desc">Entire "%s" album will be permanently removed from the SD card.</string>
    <string name="delete_song_desc">"%s" will be permanently deleted from the SD card.</string>
    <string name="delete_confirm_button_text">OK</string>
    <string name="scanning">Scanning SD card...</string>
    <string name="nowplaying_title">Now Playing</string>
    <string name="partyshuffle_title">Party Shuffle</string>
    <string name="artists_title">Artists</string>
    <string name="nowplaying_mebu">Now Playing</string>
    <string name="albums_menu">Album</string>
    <string name="albums_title">Album title</string>
    <string name="tracks_menu">Songs</string>
    <string name="tracks_title">All songs</string>
    <string name="playlists_menu">Playlists</string>
    <string name="playlists_title">Playlists</string>
    <string name="all_title">All media</string>
    <string name="browse_menu">Browse</string>
    <string name="search_title">Search</string>
    <string name="no_tracks_title">No songs</string>
    <string name="no_playlists_title">No Playlist</string>
    <string name="delete_playlist_menu">Delete Playlist</string>
    <string name="edit_playlist_menu">Edit Playlist</string>
    <string name="rename_playlist_menu">Rename Playlist</string>
    <string name="playlist_deleted_message">Playlist has been deleted.</string>
    <string name="playlist_renamed_message">Play list has been renamed.</string>
    <string name="recentlyadded">Recently added songs</string>
    <string name="recentlyadded_title">Add Song</string>
    <string name="sdcard_missing_title">No SD Card</string>
    <string name="sdcard_missing_message">No SD Card was found in device</string>
    <string name="sdcard_busy_title">SD Card not available.</string>
    <string name="sdcard_busy_message">Sorry, SD card is busy.</string>
    <string name="sdcard_error_title">SD Card error</string>
    <string name="sdcard_error_message">SD Card error.</string>
    <string name="unknown_artist_name">Unknown Artist</string>
    <string name="unknown_album_name">Unknown Album</string>
    <string name="ringtone_menu">Ringtones</string>
    <string name="ringtone_menu_short">Use song as Ringtone</string>
    <string name="ringtone_set">Added "%s" to ring tones.</string>
    <string name="play_selection">Play selection</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="queue">Queue</string>
    <string name="new_playlist">New Playlist</string>
    <string name="new_playlist_name_template">New Playlist %d</string>
    <string name="emptyplaylist">The Playlist is empty.</string>
    <string name="create_playlist_create_text">Save</string>
    <string name="create_playlist_overwrite_text">Cover</string>
    <string name="service_start_error_title">Playback Problems</string>
    <string name="service_start_error_msg">Sorry, cannot play this song.</string>
    <string name="service_start_error_button">OK</string>
    <string name="weekpicker_set">Completed</string>
    <string name="weekpicker_title">Setting the time</string>
    <string name="save_as_playlist">Save as Playlist</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="musicbrowserlabel">Browse Music</string>
    <string name="musicshortcutlabel">Music Playlists</string>
    <string name="mediaplaybacklabel">Music</string>
    <string name="videobrowserlabel">Video</string>
    <string name="mediapickerlabel">Music</string>
    <string name="playback_failed">Sorry, the player does not support this type of audio file.</string>
    <string name="remove_from_playlist">Removed from the playlist</string>
    <string name="streamloadingtext">Connecting %s</string>
    <string name="mediasearch">Use the following tools to search “%s”：</string>
    <string name="working_artists">Artists...</string>
    <string name="working_albums">Albums...</string>
    <string name="working_songs">Songs...</string>
    <string name="working_playlists">Playlists...</string>
    <string name="sort_by_track">Sort by Song</string>
    <string name="sort_by_album">Sort by Album</string>
    <string name="sort_by_artist">Artists</string>
    <string name="music_picker_title">Select a track</string>
    <string name="gadget_track">Tracks %d</string>
    <string name="fail_to_start_stream">Cannot play the requested audio stream.</string>
    <string name="search_settings_description">Artist, album and track</string>
    <string name="media_player_settings">Settings</string>
    <string name="screen_on_while_plugged_in_title">Screen on while charging</string>
    <string name="screen_on_while_plugged_in_summary">Keep the screen on while playing and plugged in</string>
    <string name="unpause_on_headset_plug_title">Unpause on connect</string>
    <string name="unpause_on_headset_plug_summary">Unpause the player when a headset is connected</string>
    <string name="doubletap_trackball_next_title">Use trackball to skip</string>
    <string name="doubletap_trackball_next_summary">Double tap trackball while sleeping to skip song</string>
    <string name="notification_artist_album">%2$s\n%1$s</string>
    <string name="create_playlist_create_text_prompt">Playlist Name</string>
    <string name="rename_playlist_same_prompt">Will be "%s" renamed</string>
    <string name="rename_playlist_diff_prompt">Will be "%s" renamed</string>
    <string name="albumsongseparator">,</string>
    <string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="widget_initial_text">Please select a song</string>
    <string name="albums_header">Album</string>
    <string name="artists_header">Artist</string>
    <string name="playlists_header">Playlists</string>
    <string name="item_count_in_header">(%d)</string>
    <string name="online_resource_music">Online Music</string>
    <string name="lrc_searching">Lyrics Search…</string>
    <string name="lrc_search_failed">Lyrics not found...</string>
    <string name="app_name">MIUI Music</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="lrc_select">Choose lyrics</string>
    <string name="favorite_playlist">My Playlists</string>
    <string name="to_favorite_playlist">Favorite playlist</string>
    <string name="to_album">Album</string>
    <string name="to_playlist">Playlists</string>
    <string name="to_track">Songs</string>
    <string name="current_playlist">Current Playlist</string>
    <string name="download_all_album">Download all the album art</string>
    <string name="pref_download_album_auto">Download album art when the Wi-Fi is unavailable</string>
    <string name="pref_download_lyric_auto">Non Wi-Fi to download lyrics</string>
    <string name="feedback">Feedback</string>
    <string name="feedback_email">Please leave email for easy contact：</string>
    <string name="email_optional">Email optional</string>
    <string name="common_settings">Common Settings</string>
    <string name="others">Other</string>
    <string name="submit_feedback">Submit feedback</string>
    <string name="feedback_reminder">Network connection is not available, please try again</string>
    <string name="feedback_thanks">Thank you for your feedback</string>
    <string name="url_default_lyric">http://120.195.13.122/q?title=%s&amp;artist=%s</string>
    <string name="url_album">http://xshare.api.xiaomi.com/xShare?do=mp3.cover.search&amp;album=%s&amp;artist=%s</string>
    <string name="url_feedback">http://sj.xiaomi.com/miniphp/ajax.php</string>
</resources>